src/objects/Assessment_Domain__c.object
<CustomObject>
    <description>ASSESSMENT</description>
    <fields>
        <fullName>Assessment_Type2__c</fullName>
        <label>Assessment Type</label>
        <picklist>
            <picklistValues>
                <fullName>FAD Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restraint Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization - Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization - Adult</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Type</label>
        <referenceTo>Assessment_Type__c</referenceTo>
        <relationshipLabel>Assessment Domains</relationshipLabel>
        <relationshipName>Assessment_Domains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Help text associated with domain</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Sort order for page / domain</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Assessment_Type__c</columns>
        <columns>NAME</columns>
        <columns>Header__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Domains</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>